apps/media/flaresolverr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
  annotations:
    reloader.stakater.com/auto: "true"
    prometheus.io/port: "8192"
    prometheus.io/scrape: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flaresolverr
        app.kubernetes.io/name: flaresolverr
        app.kubernetes.io/instance: media-prod
        app.kubernetes.io/component: flaresolverr
        app.kubernetes.io/part-of: arr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsGroup: 20568
        runAsUser: 20568
        fsGroup: 20568
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: "ghcr.io/flaresolverr/flaresolverr:v3.5.2"
          imagePullPolicy: "IfNotPresent"
          name: "flaresolverr"
          ports:
            - containerPort: 8191
              name: "flaresolverr"
            - containerPort: 8192
              name: "flare-prom"
          securityContext:
            privileged: false
            runAsNonRoot: true
            runAsUser: 20568
            runAsGroup: 20568
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - "ALL"
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: "/health"
              port: "flaresolverr"
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: "/health"
              port: "flaresolverr"
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          volumeMounts:
            - name: "app"
              mountPath: "/app/"
            - name: "tmp"
              mountPath: "/tmp"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 5
              preference:
                matchExpressions:
                  - key: "cpu_speed"
                    operator: "In"
                    values:
                      - "slow"
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app.kubernetes.io/part-of"
                      operator: "In"
                      values:
                        - "media"
                topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: "app"
          emptyDir:
            sizeLimit: "512Mi"
        - name: "tmp"
          emptyDir:
            sizeLimit: "1Gi"
