apps/media/flaresolverr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
spec:
  ports:
    - port: 80
      targetPort: flaresolverr
  selector:
    app.kubernetes.io/name: flaresolverr
